@@ -150,6 +150,7 @@ dpkg (1.18.0) UNRELEASED; urgency=low
       description.
     - Consistently use proper quotation marks ("" or '', and not the
       unbalanced `' pair) all over the place.
+    - Use syserr() instead of an ad-hoc error message in dpkg-scansources.
 
   [ Raphaël Hertzog ]
   * Drop myself from Uploaders.
